# api/genpb/cerbos/request/v1/hashpb_helpers.pb.go
@@ -345,6 +345,11 @@ func cerbos_policy_v1_Policy_hashpb_sum(m *v11.Policy, hasher hash.Hash, ignore 
 					cerbos_policy_v1_ExportVariables_hashpb_sum(t.ExportVariables, hasher, ignore)
 				}
 
+			case *v11.Policy_RolePolicy:
+				if t.RolePolicy != nil {
+					cerbos_policy_v1_RolePolicy_hashpb_sum(t.RolePolicy, hasher, ignore)
+				}
+
 			}
 		}
 	}
@@ -556,6 +561,42 @@ func cerbos_policy_v1_RoleDef_hashpb_sum(m *v11.RoleDef, hasher hash.Hash, ignor
 			cerbos_policy_v1_Condition_hashpb_sum(m.GetCondition(), hasher, ignore)
 		}
 
+	}
+}
+
+func cerbos_policy_v1_RolePolicy_hashpb_sum(m *v11.RolePolicy, hasher hash.Hash, ignore map[string]struct{}) {
+	if _, ok := ignore["cerbos.policy.v1.RolePolicy.role"]; !ok {
+		_, _ = hasher.Write(protowire.AppendString(nil, m.GetRole()))
+
+	}
+	if _, ok := ignore["cerbos.policy.v1.RolePolicy.scope"]; !ok {
+		_, _ = hasher.Write(protowire.AppendString(nil, m.GetScope()))
+
+	}
+	if _, ok := ignore["cerbos.policy.v1.RolePolicy.rules"]; !ok {
+		if len(m.Rules) > 0 {
+			for _, v := range m.Rules {
+				if v != nil {
+					cerbos_policy_v1_RoleRule_hashpb_sum(v, hasher, ignore)
+				}
+
+			}
+		}
+	}
+}
+
+func cerbos_policy_v1_RoleRule_hashpb_sum(m *v11.RoleRule, hasher hash.Hash, ignore map[string]struct{}) {
+	if _, ok := ignore["cerbos.policy.v1.RoleRule.resource"]; !ok {
+		_, _ = hasher.Write(protowire.AppendString(nil, m.GetResource()))
+
+	}
+	if _, ok := ignore["cerbos.policy.v1.RoleRule.allowed_actions"]; !ok {
+		if len(m.AllowedActions) > 0 {
+			for _, v := range m.AllowedActions {
+				_, _ = hasher.Write(protowire.AppendString(nil, v))
+
+			}
+		}
 	}
 }
 
