# schema/openapiv2/cerbos/svc/v1/svc.swagger.json
@@ -2685,6 +2685,9 @@
         "exportVariables": {
           "$ref": "#/definitions/v1ExportVariables"
         },
+        "rolePolicy": {
+          "$ref": "#/definitions/v1RolePolicy"
+        },
         "variables": {
           "type": "object",
           "additionalProperties": {
@@ -2891,6 +2894,39 @@
         },
         "condition": {
           "$ref": "#/definitions/v1Condition"
+        }
+      }
+    },
+    "v1RolePolicy": {
+      "type": "object",
+      "properties": {
+        "role": {
+          "type": "string"
+        },
+        "scope": {
+          "type": "string",
+          "title": "string version = 2 [\n  (buf.validate.field).required = true,\n  (buf.validate.field).string = {pattern: \"^[[:word:]]+$\"}\n];"
+        },
+        "rules": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1RoleRule"
+          }
+        }
+      }
+    },
+    "v1RoleRule": {
+      "type": "object",
+      "properties": {
+        "resource": {
+          "type": "string"
+        },
+        "allowedActions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
